pkg/controller/networkpolicy/testdata/networkpolicy/appinstance/existing.yaml
apiVersion: v1
data:
  config: '{"networkPolicies":true}'
kind: ConfigMap
metadata:
  name: acorn-config
  namespace: acorn-system
