pkg/controller/networkpolicy/testdata/networkpolicy/appinstance/expected.golden
`apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  labels:
    acorn.io/managed: "true"
  name: app-name
  namespace: app-created-namespace
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          acorn.io/app-namespace: app-namespace
  podSelector:
    matchLabels:
      acorn.io/app-name: app-name
      acorn.io/app-namespace: app-namespace
      acorn.io/managed: "true"
  policyTypes:
  - Ingress
status: {}
`
