pkg/controller/networkpolicy/testdata/networkpolicy/appinstance/expected.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-name
  namespace: app-created-namespace
  labels:
    "acorn.io/managed": "true"
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              acorn.io/app-namespace: app-namespace
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 169.254.169.254/32
        - ipBlock:
            cidr: ::/0
            except:
              - fd00:ec2::254/64
  podSelector:
    matchLabels:
      acorn.io/app-name: app-name
      acorn.io/app-namespace: app-namespace
      acorn.io/managed: "true"
  policyTypes:
    - Ingress
    - Egress
